# trainpi

./: .envrc  .gitignore  README.md  config.txt  pyproject.toml
trainpi/: __init__.py  __main__.py  timedisplay.py  trainpi.tcss
