
[project]
name = "trainpi"
version = "0.1.1"
description = "Train control via Raspberry Pi GPIO and the LEGO Build Hat"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.11"
dependencies = ["buildhat<1.0.0,>=0.7.0", "textual<1.0.0,>=0.70.0"]
readme = "README.md"

[project.scripts]
trainpi = "trainpi.__main__:main"

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.10.1",
 "ruff<1.0.0,>=0.4.10",
 "ty>=0.0.1a5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
